--- a/overall/WaysofSeeingResponse.html
+++ b/overall/WaysofSeeingResponse.html
@@ -3,10 +3,20 @@
 
 	<head>
 		<title> 🖥 Intro to Web Dev Week 01</title>
+		<link rel="stylesheet" type="text/css" href="styleMain.css">
+  </head>
 	</head>
 
 	<body>
-		<h3>Response to "Ways of Seeing"</h3>
+		<nav> 
+      <ul>
+        <li><a href="mainPage.html"> << Click to go backkk</a></li>
+      </ul>
+    </nav>
+  </br>
+		 <header>Week 1 Reading Response - Ways of Seeing </header>
+    
+	
 		<p>Before watching this I knew that I had an inherent bias when viewing art due to my own personal experiences. I knew that it was the same for others as well. There are so many factors that go into my bias and the way I interpret things, however, what I did not think of was the idea that school and society has indoctrinated us with the idea that "art is beautiful" or false mystification of art. As long as I remember, I have thought of art as beautiful. I also found the way we view gender as interesting. Near the end of the video, there was a painting by Caravaggio shown to children who interpreted them directly. They tried to immediately understand what was going on in the painting. I wonder if the false mystification I hold has significantly impacted the way I interpret paintings. When I visited the Met a few years ago, I just thought the old paintings were beautiful and did not try to think of what was happening in the picture or connect it to myself because I placed it on a high pedestal, somewhere above me, so I could not relate it to myself. But isn't art made for an audience to connect to? 
 		</p>
 
