--- a/overall/week01/WaysofSeeingResponse.html
+++ b/overall/week01/WaysofSeeingResponse.html
@@ -11,7 +11,7 @@
 	<body>
 
         <div class = "week1">
-     <a href="../mainPage.html" target = "_blank"> << Click to go backkk </a> </div>
+     <a href="../../index.html" target = "_blank"> << Click to go backkk </a> </div>
       <div class = "break">
         break break break
       </div>
