--- a/overall/week02/Week2ReadingResponse.html
+++ b/overall/week02/Week2ReadingResponse.html
@@ -3,7 +3,7 @@
 
 
 	<head>
-		<title> 🖥 Intro to Web Dev Week 02 - Reading Response :)</title>
+		<title> Web Dev Week 2 :)</title>
  <link href="https://fonts.googleapis.com/css?family=Cantata+One|EB+Garamond|Francois+One|Fredoka+One|Lemonada|Montserrat+Subrayada&display=swap" rel="stylesheet">
  <link rel="stylesheet" type="text/css" href="style2.css">
   </head>
@@ -13,7 +13,7 @@
 	<body>
     <main>
       <div class = "week1">
-     <a href="../mainPage.html" target = "_blank"> << Click to go backkk </a> </div>
+     <a href="../../index.html" target = "_blank"> << Click to go backkk </a> </div>
       <div class = "break">
         break break break
       </div>
