--- a/overall/week02/Week2ReadingResponse.html
+++ b/overall/week02/Week2ReadingResponse.html
@@ -19,7 +19,7 @@
       </div>
 
     <div class = "aside">
-    <header> <h1> Response to Ways of Seeing  </h1></header>
+    <header> <h1> Response to Articles </h1></header>
     <br>
     
     
