--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
       <div class = "week1">
         <a href="overall/week05/PixarMeme/index.html" target="_blank"> Week 5 >> </a> 
       </div>
-
+       <div class = "break">
+        break break break
+      </div>
+      <div class = "week1">
+        <a href="overall/week06/index.html" target="_blank"> Week 6 >> </a> 
+      </div>
+     
+   
+     
    
       <!-- </ul>
     </nav> -->
