--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
       <div class = "week1">
         <a href="overall/week06/index.html" target="_blank"> Week 6 >> </a> 
       </div>
+       <div class = "break">
+        break break break
+      </div>
+      <div class = "week1">
+        <a href="overall/midtermWireframe/index.html" target="_blank"> Midterm Wireframes >> </a> 
+      </div>
      
    
      
