--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
    
      <div class = "week1">
-        <a href="overall/midterm/index.html" target="_blank"> Midterm User Testing >>
+        <a href="overall/midtermUser/index.html" target="_blank"> Midterm User Testing >>
           
         </a> 
       </div>
