--- a/overall/midtermUser/index.html
+++ b/overall/midtermUser/index.html
@@ -13,7 +13,7 @@
  <body>
  	<div class = "pos">
 
- 	<a href = "neha-vasu.github.io/overall/midterm" > Midterm? </a>
+ 	<a href = "../midterm" > Midterm? </a>
  	<br/>
  	<br/>
  	<br/>
