--- a/overall/midtermUpdated/love.html
+++ b/overall/midtermUpdated/love.html
@@ -47,10 +47,12 @@
 </div>
   <div class = "title"> a lil love </div>
  
-<div class="button_cont" align="right"><a class="eximple_c selfLove"  href="selfLove.html"  rel="nofollow noopener"> self-love </a></div>
+<div class="button_cont" align="right"><a class="eximple_c selfLove"  href="selfLove.html"  rel="nofollow noopener"> <p class = "down">love yourself </p></a></div>
 
- <div class="button_cont" align="right"><a class="eximple_c affirm"  href="affirm.html"  rel="nofollow noopener">  affirmations </a></div>
- 
+ <div class="button_cont" align="right"><a class="eximple_c affirm"  href="affirm.html"  rel="nofollow noopener">  <p class = "down">affirmations </p></a></div>
+ <div class = "empty"> <h1> hellooooooooo </h1></div>
+  <div class = "z"> </div>
+ </div>
 </main>
 </body>
 </html>
