--- a/overall/midtermUpdated/main.html
+++ b/overall/midtermUpdated/main.html
@@ -4,15 +4,19 @@
 	<head>
 		<title> Love Yourself </title>
     <link rel="shortcut icon" type="image/png" href="loveYourselfLogo.png"/>
+
      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
      <meta charset="utf-8">
+
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Cardo|Frank+Ruhl+Libre|Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="main.css">
+
   </head>
   <header>
-    <h1> hi </h1>
+    <h1> hi </h1> 
     <header>
-
+      <!-- this header is invisible but helps push the flex icons to the bottom of the page but not to the bottom completely
+ -->
 	<body>
     <main>
 		<!-- <div class = "aside">
@@ -24,6 +28,10 @@
  <h1> Love Yourself  </h1>
     </div>
     -->
+<!-- these are the different icons that when hovered over go from the icon to the text on each button which is why there is an img for the bottom and the top as the top becomes invisible when hovered over
+ -->
+<!-- the 4 sections I did this for are about, project, bucket list and 
+a lil love -->
     <div class = "buttons">
       <div id="about">
   <a href = "about.html"><img class="bottom" src="homeIcon/aboutTxt2.png" /></a>
