--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<title> Web Dev - Neha Vasudevan :) </title>
     <link href="https://fonts.googleapis.com/css?family=Cantata+One|EB+Garamond|Francois+One|Fredoka+One|Lemonada|Montserrat+Subrayada&display=swap" rel="stylesheet">
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="overall/styleMain.css">
   </head>
 
@@ -70,6 +71,15 @@
    
      <div class = "week1">
         <a href="overall/midtermUpdated/main.html" target="_blank"> Midterm >>
+          
+        </a> 
+      </div>
+      <div class = "break">
+        break break break
+      </div>
+   
+     <div class = "week1">
+        <a href="overall/midtermPresentation/ppt.html " target="_blank"> Midterm Presentation >>
           
         </a> 
       </div>
