--- a/overall/midtermUpdated/love.html
+++ b/overall/midtermUpdated/love.html
@@ -1,21 +1,37 @@
 <html>
 
   <head>
-    <title> Love </title>
+    <title> A lil love </title>
     <link rel="shortcut icon" type="image/png" href="loveYourselfLogo.png"/>
+
      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
      <meta charset="utf-8">
+
     <link href="https://fonts.googleapis.com/css?family=Chango|Concert+One|Fredoka+One|Playfair+Display|Rubik+Mono+One|Titan+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="love.css">
+
   </head>
   <header>
+<!-- this <a> is for the logo to lead you back to the first title page when clicked on 
+
+I also made the logo myself-->
+
 
     <a href = "main.html" > <img class = "logo" src = "loveYourselfLogo.png"> </a>
     <h1> hi </h1>
+
+
+     <!--  this is the header menu -->
     <div class = "pos1">
     <div class="button_cont" align="right"><a class="example_c about"  href="about.html"  rel="nofollow noopener">  about </a></div>
 
 <div class="button_cont" align="right"><a class="example_c proj" href="projects.html"  rel="nofollow noopener"></div>  projects </a></div>
+
+
+<!-- I also tried to make a dropdown menu for the buttons that would
+  benefit from it but it didn't work after a lot of attempts -->
+
  <!-- <div class="dropdown">
   <button class="dropbtn">Dropdown</button>
   <div class="dropdown-content">
@@ -46,12 +62,23 @@
     
 </div>
   <div class = "title"> a lil love </div>
+
+  <!-- These next buttons are the menu options under a lil love that I placed
+by hand because they would not let me make them bigger when I adjusted
+them to get bigger when hovered over. This took lots of time but
+I got it to work. I made sure they don't have a border and there
+were gifs for each theme that worked.
+
+The 2 subsections I made these buttons for love yourself (selfLove)
+and affirmations (affirm)
+ -->
  
 <div class="button_cont" align="right"><a class="eximple_c selfLove"  href="selfLove.html"  rel="nofollow noopener"> <p class = "down">love yourself </p></a></div>
 
  <div class="button_cont" align="right"><a class="eximple_c affirm"  href="affirm.html"  rel="nofollow noopener">  <p class = "down">affirmations </p></a></div>
- <div class = "empty"> <h1> hellooooooooo </h1></div>
+ 
   <div class = "z"> </div>
+  <!-- this mysterious box below is what gives a ton of extra scrolling -->
  </div>
 </main>
 </body>
