--- a/overall/midtermUpdated/tokyo.html
+++ b/overall/midtermUpdated/tokyo.html
@@ -3,15 +3,24 @@
 	<head>
 		<title> 5 Fun Things To Do in Tokyo </title>
     <link rel="shortcut icon" type="image/png" href="loveYourselfLogo.png"/>
+
      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+
      <meta charset="utf-8">
+
     <link href="https://fonts.googleapis.com/css?family=Chango|Concert+One|Fredoka+One|Playfair+Display|Rubik+Mono+One|Titan+One&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" href="tokyo.css">
+
   </head>
   <header>
+<!-- this <a> is for the logo to lead you back to the first title page when clicked on 
 
+I also made the logo myself-->
     <a href = "main.html" > <img class = "logo" src = "loveYourselfLogo.png"> </a>
     <h1> hi </h1>
+
+    <!-- this is the standard menu -->
     <div class = "pos1">
     <div class="button_cont" align="right"><a class="example_c about"  href="about.html"  rel="nofollow noopener">  about </a></div>
 
@@ -40,10 +49,19 @@
 <div class = "back"> <a href = "bucket.html"> << back </a>
 	<body>
      <main>
- <h1 id = "title"> 5 fun things to do in Tokyo</h1>
-<div class = "flex1">
-    <div class = "item item1">
 
+      <!-- the content of this website is entirely copied from this website, I'm sorry, I didn't have time to make all the content of the website 
+      The sources are:
+https://jw-webmagazine.com/2018-tokyo-bucket-list-20-top-things-to-do-f7f1b4372a90/
+https://apassionandapassport.com/10-days-in-japan-a-first-timers-complete-itinerary/ -->
+
+
+ <h1 id = "title"> 5 fun things to do in Tokyo</h1>
+<!--  flex 1 is to organize the 5 major boxes -->
+<div class = "flex1">
+  <!-- the item1 is for each white box -->
+    <div class = "item item1">
+<!-- the itemHead is for the header of each of the 5 fun things to do in tokyo -->
       <h2 id = "itemHead"> 1. Tokyo Tower </h2>
       <br/>
       <img class = "tower"src = tokyoTower.jpg>
@@ -104,7 +122,7 @@ My recommended viewing spot of Tokyo Tower is Zojoji Temple, which is located ri
       <br/>
     </div>
 <div class = "z"> </div>
-
+<!-- this mysterious box below is what gives a ton of extra scrolling -->
 </main>
 </body>
 </html>
