--- a/overall/midtermUpdated/selfLove.html
+++ b/overall/midtermUpdated/selfLove.html
@@ -3,10 +3,14 @@
 	<head>
 		<title> Self-Love </title>
     <link rel="shortcut icon" type="image/png" href="loveYourselfLogo.png"/>
+
      <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
      <meta charset="utf-8">
+
     <link href="https://fonts.googleapis.com/css?family=Chango|Concert+One|Fredoka+One|Playfair+Display|Rubik+Mono+One|Titan+One&display=swap" rel="stylesheet">
+
     <script src="hover.js" defer></script>
+
     <link rel="stylesheet" type="text/css" href="selfLove.css">
   </head>
   <header>
@@ -57,8 +61,17 @@
 	<body>
      <main>
      	
+      <!-- I re-used code from another page. This is the grid for the 9 situations where you should love yourself even if it is hard.
+
+      Also I don't want a controversy so I want to point out that I meant you should love yourself when you inadvertantly hurt someone not if you intentionally do so. -->
      	<div class="submenu">
-        <div class="obj obj1" > <!-- <a class = "objj" onmouseover="changeText('Write')" onmouseleave="defaultText('when you feel like you are awkward')" > --><p class = "down1" > when you feel like you're awkward</p> </div>
+<!-- 
+        this is a 3 by 3 grid with 9 objects -->
+        <div class="obj obj1" >
+
+         <!--  the next comment is me desperately attempting to make the javascript work so when I hover over the grid the text and image changes as well as the size of both
+ -->
+         <!-- <a class = "objj" onmouseover="changeText('Write')" onmouseleave="defaultText('when you feel like you are awkward')" > --><p class = "down1" > when you feel like you're awkward</p> </div>
         <div class="obj obj2"> <p class = "down1"> when you're disappointed in yourself </p> </div>
         <div class="obj obj3"> <p class = "down1"> when you messed up </p> </div>
         <div class="obj obj4"> <p class = "down1"> when you hurt someone </p></div>
@@ -77,15 +90,10 @@
 
   
 <div class = "z"> </div>
-  <!-- div class="articles"> -->
-        <!-- <div class="box1"><a href = "art.html"> Painting Jars for Humans </a></div>
-        <div class = "jar"><img src = "moonJar3.jpg"></div>
-        <div class="box box2"><a href = "word.html">• words •</a></div>
-        <div class="box box3"><a href = "kind.html">• kindess •</a></div>
-        </div
-       
-        -->
+  <!-- this mysterious box below is what gives a ton of extra scrolling -->
 
+
+<!--   here are the remnants of the javascript I tried to use -->
 
 <!-- <script>
 	function changeText(text)
