--- a/overall/java.html
+++ b/overall/java.html
@@ -2,7 +2,7 @@
 <html>
 
 	<head>
-    <title> Ruff ruff</title>
+    <title> Ruff Ruff </title>
     <link rel="shortcut icon" type="image/png" href="../../week06/code/globe.png"/>
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300&family=Fredoka+One&display=swap" rel="stylesheet">
