--- a/index.html
+++ b/index.html
@@ -15,40 +15,41 @@
     <br>
     <!-- <nav> 
       <ul> -->
+      <!-- 	<div class = "flexbox"> -->
         <div class = "week1">
-        <!-- <li> --><a href="overall/week01/WaysofSeeingResponse.html" target = "_blank"> Week 1 >> </a> <!-- </li> -->
+        <!-- <li> --><a href="overall/week01/WaysofSeeingResponse.html" target = "_blank"> Week 1 - Ways of Seeing Response >> </a> <!-- </li> -->
       </div>
       <div class = "break">
         break break break
       </div>
 
         <div class = "week1">
-        <a href="overall/week02/Week2ReadingResponse.html" target="_blank"> Week 2 >> </a> 
+        <a href="overall/week02/Week2ReadingResponse.html" target="_blank"> Week 2 - Reading Response >> </a> 
       </div>
       <div class = "break">
         break break break
       </div>
 
       <div class = "week1">
-        <a href="overall/week03/selfie/selfPortrait.html" target="_blank"> Week 3 >> </a> 
+        <a href="overall/week03/selfie/selfPortrait.html" target="_blank"> Week 3 - Self Portrait >> </a> 
       </div>
       <div class = "break">
         break break break
       </div>
       <div class = "week1">
-        <a href="overall/week04/dali.html" target="_blank"> Week 4 >> </a> 
+        <a href="overall/week04/dali.html" target="_blank"> Week 4 - Salvador Dali Presentation >> </a> 
       </div>
        <div class = "break">
         break break break
       </div>
       <div class = "week1">
-        <a href="overall/week05/PixarMeme/index.html" target="_blank"> Week 5 >> </a> 
+        <a href="overall/week05/PixarMeme/index.html" target="_blank"> Week 5 - Pixar Meme Page >> </a> 
       </div>
        <div class = "break">
         break break break
       </div>
       <div class = "week1">
-        <a href="overall/week06/index.html" target="_blank"> Week 6 >> </a> 
+        <a href="overall/week06/index.html" target="_blank"> Week 6 - The Society of the Spectacle >> </a> 
       </div>
        <div class = "break">
         break break break
@@ -84,13 +85,12 @@
         </a> 
       </div>
    
-   </div>
       <div class = "break">
         break break break
       </div>
    
      <div class = "week1">
-        <a href="overall/java.html " target="_blank"> Week 9 >>
+        <a href="overall/java.html " target="_blank"> Week 9 - ruff ruff >>
           
         </a> 
       </div>
@@ -99,7 +99,7 @@
       </div>
    
      <div class = "week1">
-        <a href="overall/week10/massage.html " target="_blank"> Week 10 >>
+        <a href="overall/week10/massage.html " target="_blank"> Week 10 - The Medium is the Message >>
           
         </a> 
       </div>
