--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title> Web Dev - Neha Vasudevan :) </title>
+		  <link rel="shortcut icon" type="image/png" href="overall/sunflower.jpg"/>
     <link href="https://fonts.googleapis.com/css?family=Cantata+One|EB+Garamond|Francois+One|Fredoka+One|Lemonada|Montserrat+Subrayada&display=swap" rel="stylesheet">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" type="text/css" href="overall/styleMain.css">
