--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
           
         </a> 
       </div>
+      <div class = "break">
+        break break break
+      </div>
+   
+     <div class = "week1">
+        <a href=" https://gdrigo.github.io/webDev/songMaker/music.html" target="_blank"> Neha & Greg - Jungle Music Maker >>
+          
+        </a> 
+      </div>
    
       <!-- </ul>
     </nav> -->
