--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       </div>
    
      <div class = "week1">
-        <a href=" https://gdrigo.github.io/webDev/songMaker/music.html" target="_blank"> Neha & Greg - Jungle Music Maker >>
+        <a href="https://gdrigo.github.io/webDev/songMaker/" target="_blank"> Neha & Greg - Jungle Music Maker >>
           
         </a> 
       </div>
