--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
           
         </a> 
       </div>
+      <div class = "break">
+        break break break
+      </div>
+   
+     <div class = "week1">
+        <a href="overall/final" target="_blank"> Final
+        </a> 
+      </div>
    
       <!-- </ul>
     </nav> -->
