--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
    
      <div class = "week1">
-        <a href="overall/final" target="_blank"> Final
+        <a href="overall/final/index.html" target="_blank"> Final
         </a> 
       </div>
    
